a bit of debugging, much more to come